boton recuperar contraseña

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -35,4 +35,10 @@
 
     <ion-button expand="block" type="submit" class="login-btn">Ingresar</ion-button>
   </form>
+
+  <!-- Botón para recuperar contraseña -->
+  <ion-button expand="block" fill="clear" color="medium" (click)="goToResetPassword()">
+    Recuperar Contraseña
+  </ion-button>
+
 </ion-content>
